[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Fonts/CutePAFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Lighting/light_128px.png" type="Texture" id=4]
[ext_resource path="res://Player/LightPet.gd" type="Script" id=5]
[ext_resource path="res://Player/light_pet.png" type="Texture" id=6]
[ext_resource path="res://Player/Spirit.gd" type="Script" id=7]
[ext_resource path="res://Player/PlayerAnimator.tscn" type="PackedScene" id=8]
[ext_resource path="res://Interactables/InteractionComponent.tscn" type="PackedScene" id=9]
[ext_resource path="res://Interactables/InteractionComponentUI.tscn" type="PackedScene" id=10]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
outline_color = Color( 0.196078, 0.196078, 0.196078, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 12 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Spirit" type="Sprite" parent="."]
position = Vector2( -13, -31 )
texture = ExtResource( 6 )
hframes = 2
frame = 1
script = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="Spirit"]
position = Vector2( 0, 2 )
texture = ExtResource( 4 )
mode = 2
shadow_enabled = true
script = ExtResource( 5 )
noise = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spirit"]
anims/Fly = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, -32 )
texture = ExtResource( 1 )
centered = false
hframes = 9
frame = 2

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="UpdatePositionTimer" type="Timer" parent="."]

[node name="NameLabel" type="Label" parent="."]
material = SubResource( 3 )
margin_left = -20.0
margin_top = 2.0
margin_right = 23.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerAnimator" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 5 )

[node name="InteractionComponent" parent="." instance=ExtResource( 9 )]
interaction_parent = NodePath("..")

[node name="InteractionComponentUI" parent="." instance=ExtResource( 10 )]
margin_left = 9.0
margin_top = -34.0
margin_right = 52.0
margin_bottom = -24.0
interaction_component_nodepath = NodePath("../InteractionComponent")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="UpdatePositionTimer" to="." method="_on_UpdatePositionTimer_timeout"]
